Energy now in MJ, and car was added

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
         <item>Cable Car</item>
         <item>Boat</item>
         <item>S-Bahn</item>
-
+        <item>Car</item>
     </string-array>
 
     <!--Legend for Table in MainActivity-->
