Add 3 buttons for changing time
Refactor vehicle (Button) to vehicleButton
Add rounded button shapes
Add few strings
Add buttons in MainActivity

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -41,4 +41,9 @@
     <string name="distance_unit_m">%.2fm</string>
     <string name="time_unit_h">h</string>
     <string name="time_unit_min">min</string>
+
+    <!--Change Time Buttons-->
+    <string name="today">Today</string>
+    <string name="weekly">Weekly</string>
+    <string name="monthly">Monthly</string>
 </resources>
